--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,15 +5,21 @@ name: Documentation
 
 on: [push, pull_request]
 
+permissions:
+  contents: read
+
 env:
   DOXYGEN_VERSION: 1.9.6
 
 jobs:
   build:
+    name: Build documentation
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
       - name: Install dependencies
         run: |
@@ -50,6 +56,7 @@ jobs:
           path: doc/deploy
 
   deploy:
+    name: Deploy documentaion
     runs-on: ubuntu-22.04
     needs: build
     if: github.event_name != 'pull_request'
