--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -58,6 +58,8 @@ jobs:
   deploy:
     name: Deploy documentaion
     runs-on: ubuntu-22.04
+    environment:
+      name: github-pages
     needs: build
     if: github.event_name != 'pull_request'
     permissions:
