--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,6 +5,9 @@ on:
   pull_request:
   schedule:
     - cron: "0 0 * * *"
+ 
+permissions:
+  contents: read
 
 jobs:
   build:
@@ -18,6 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: example-application
+          persist-credentials: false
 
       - name: Set up Python
         uses: actions/setup-python@v5
